[package]
name = "template"
version = "0.1.0"
edition = "2021"

[dependencies]
nightmare = { path = "../../crates/nightmare" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"

[features]
default = []
webgl = ["nightmare/webgl"]
webgpu = ["nightmare/webgpu"]
